--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+    <link rel="icon" type="image/png" sizes="32x32" href="./css/images/favicon-32x32.png" />
+    <link rel="stylesheet" href="./css/style.css" /> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
+    <title>Mooenz | Stats preview card component</title>
+  </head>
+  <body>
+    <main>  
+      <section class="main-section container">
+        <div class="img borde-radius-top"></div>
+        <div class="overlay borde-radius-top"></div>
+        <div class="container-main">
+          <div class="container-body">
+            <h1> Get <span class="accent">insights</span> that <br> help your bussiness grow.</h1>
+            <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
+          </div>
+          <div class="container-stats">
+            <div class="stat">
+              <h2>10k+</h2>
+              <p>COMPANIES</p>
+            </div>
+            <div class="stat">
+              <h2>314</h2>
+              <p>TEMPLATES</p>
+            </div>
+            <div class="stat">
+              <h2>12M+</h2>
+              <p>QUERIES</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Stats preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    </main>
+  </body>
 </html>
