Upload desktop view

--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -11,12 +11,11 @@
   </head>
   <body>
     <main>  
-      <section class="main-section container">
+      <section class="main-section borde-radius-top">
         <div class="img borde-radius-top"></div>
-        <div class="overlay borde-radius-top"></div>
         <div class="container-main">
           <div class="container-body">
-            <h1> Get <span class="accent">insights</span> that <br> help your bussiness grow.</h1>
+            <h1> Get <span class="accent">insights</span> that help your bussiness grow.</h1>
             <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
           </div>
           <div class="container-stats">
@@ -35,7 +34,6 @@
           </div>
         </div>
       </section>
-
     </main>
   </body>
 </html>
