--- a/article-preview-component-master/index.html
+++ b/article-preview-component-master/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Article preview component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
+  <title>Mooenz | Article preview component</title>
 </head>
 <body>
-
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main>
+    <section>
+      <article class="container-article">
+        <div class="img-article"></div>
+        <div class="container-info">
+          <div class="info-article">
+            <h1>Shift the overall look and feel by adding these wonderful touches to furniture in your home.</h1>
+            <p>Ever been in a room and feit like something was missing? Perhaps it feit slightly bare and uninviting. I´ve got some simple tips to help you make any room feel complete.</p>
+          </div>
+          <div class="container-user-card">
+            <div class="user-card">
+              <img src="./css/images/avatar-michelle.jpg" alt="user avatar michell">
+              <div class="container-infomation-user">
+                <span>Michell Appleton</span>
+                <span>28 Jun 2020</span>
+              </div>  
+            </div>
+            <button class="share">
+              <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13"><path fill="#6E8098" d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/></svg>
+            </button>
+          </div>
+        </div>
+      </article>
+    </section>
+  </main>
 </body>
 </html>
