--- a/article-preview-component-master/index.html
+++ b/article-preview-component-master/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./css/images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
   <main>
     <section>
       <article class="container-article">
-        <div class="img-article"></div>
+        <img class="img-article" src="./css/images/drawers.jpg" alt="">
         <div class="container-info">
           <div class="info-article">
             <h1>Shift the overall look and feel by adding these wonderful touches to furniture in your home.</h1>
