--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" /> 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
-    <title>Mooenz | Stats preview card component</title>
+    <title>Stats preview card component - Mooenz</title>
   </head>
   <body>
     <main>  
