--- a/article-preview-component-master/index.html
+++ b/article-preview-component-master/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;500;700&display=swap" rel="stylesheet">
-  <title>Mooenz | Article preview component</title>
+  <title>Article preview component - Mooenz</title>
 </head>
 <body>
   <main>
