Add completed desing mobile

--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -17,17 +17,18 @@
           <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
         </div>
         <div class="container-form">
-          <h2>Try it free 7 days then $20/mo. thereafter</h2>
-          <form action="">
-            <input type="text" name="name" id="input-name" placeholder="First Name" />
-            <input type="text" name="last-name" id="input-lastname" placeholder="" />
-            <input type="email" name="email" id="email">
-            <input type="password" name="password" id="password">
-            <button>Claim your free trial</button>
-            <p>By clicking the button, you are agreeing to our Terms and Services</p>
+          <h2>Try it free 7 days <span>then $20/mo. thereafter</span></h2>
+          <form >
+            <input type="text" name="name" id="name" placeholder="First Name" />
+            <input type="text" name="last-name" id="last-name" placeholder="Last Name" />
+            <input type="email" name="email" id="email" placeholder="Email Address">
+            <input type="password" name="password" id="password" placeholder="Password">
+            <input class="button" id="button" type="button" value="Claim your free trial" />
+            <p>By clicking the button, you are agreeing to our <a href="">Terms and Services</a></p>
           </form>          
         </div>
       </section>
     </main>
+    <script src="./index.js"></script>
   </body>
 </html>
