Fix main background, function controls and add show success

--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -42,7 +42,9 @@
               <img class="icon-error"  src="./css/images/icon-error.svg" alt="icon error">            
             </div>
             <label class="label" for="password">Password cannot be empty</label>
-            
+            <div class="container-sucess">
+              <span class="sucess">¡Sucess, Congratulations!</span>
+            </div>
             <input class="button" id="button" type="button" value="Claim your free trial" />
             <p>By clicking the button, you are agreeing to our <a href="">Terms and Services</a></p>
           </form>          
