Fix notification, centered according to the button

--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -46,7 +46,9 @@
               <span class="sucess">¡Sucess, Congratulations!</span>
             </div>
             <input class="button" id="button" type="button" value="Claim your free trial" />
-            <p>By clicking the button, you are agreeing to our <a href="">Terms and Services</a></p>
+            <div class="container-notification">
+              <p>By clicking the button, you are agreeing to our <a href="">Terms and Services</a></p>
+            </div>
           </form>          
         </div>
       </section>
