Mobile desing its completed

--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -1,40 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+<html lang="es">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./css/images/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <title>FAQ Accordion Card - mooenz</title>
+  </head>
+  <body>
+    <main>
+      <section>
+        <div class="container-img">
+          <img class="firts-img" src="./css/images/illustration-woman-online-mobile.svg" alt="woman online">
+          <img class="second-img" src="./css/images/bg-pattern-mobile.svg" alt="shadow woman online">
+        </div>
+        
+        <div class="container-faq">
+          <div class="container-title">          
+            <h1>FAQ</h1>
+          </div>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+          <div class="container-once-faq">
+            <div class="sub-title"> 
+              <h3>How many team members can I invite?</h3>
+              <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+            </div>
+            <p class="text-faq">You can invite up to 2 additional users on the Free plan. There is no limit on 
+              team members for the Premium plan.</p>
+          </div>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+          <div class="container-once-faq">
+            <div class="sub-title"> 
+              <h3>What is the maximum file upload size?</h3>
+              <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+            </div>
+            <p class="text-faq">No more than 2GB. All files in your account must fit your allotted storage space.</p>           
+          </div>
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+          <div class="container-once-faq">
+            <div class="sub-title">
+              <h3>How do I reset my password?</h3>
+              <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+            </div>
+            <p class="text-faq">Click “Forgot password” from the login page or “Change password” from your profile page.
+              A reset link will be emailed to you.</p>
+          </div>
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+          <div class="container-once-faq">
+            <div class="sub-title"> 
+              <h3>Can I cancel my subscription?</h3>
+              <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+            </div>
+            <p class="text-faq">Yes! Send us a message and we’ll process your request no questions asked.</p>
+          </div>
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
+          <div class="container-once-faq">
+            <div class="sub-title"> 
+              <h3>Do you provide additional support?</h3>
+              <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+            </div>
+            <p class="text-faq">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+          </div>
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        </div>
+      </section>
+    </main> 
+    <script src="./index.js"></script>
+  </body>
 </html>
