--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -12,56 +12,58 @@
   <body>
     <main>
       <section>
-        <div class="container-img">
-          <img class="firts-img" src="./css/images/illustration-woman-online-mobile.svg" alt="woman online">
-          <img class="second-img" src="./css/images/bg-pattern-mobile.svg" alt="shadow woman online">
-        </div>
         
-        <div class="container-faq">
-          <div class="container-title">          
-            <h1>FAQ</h1>
+        <div class="container-main">
+          <div class="container-img">
+            <img class="box" src="./css/images/illustration-box-desktop.svg" alt="box">
+            <img class="firts-mobile-img" src="./css/images/illustration-woman-online-mobile.svg" alt="woman online mobile">
+            <img class="second-mobile-img" src="./css/images/bg-pattern-mobile.svg" alt="shadow woman online mobile">
           </div>
-
-          <div class="container-once-faq">
-            <div class="sub-title"> 
-              <h3>How many team members can I invite?</h3>
-              <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+          <div class="container-faq">            
+            <div class="container-title">          
+              <h1>FAQ</h1>
+            </div>          
+            <div class="container-once-faq">
+              <div class="sub-title"> 
+                <h3>How many team members can I invite?</h3>
+                <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+              </div>
+              <p class="text-faq">You can invite up to 2 additional users on the Free plan. There is no limit on 
+                team members for the Premium plan.</p>
             </div>
-            <p class="text-faq">You can invite up to 2 additional users on the Free plan. There is no limit on 
-              team members for the Premium plan.</p>
-          </div>
-
-          <div class="container-once-faq">
-            <div class="sub-title"> 
-              <h3>What is the maximum file upload size?</h3>
-              <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+  
+            <div class="container-once-faq active">
+              <div class="sub-title"> 
+                <h3>What is the maximum file upload size?</h3>
+                <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+              </div>
+              <p class="text-faq">No more than 2GB. All files in your account must fit your allotted storage space.</p>           
             </div>
-            <p class="text-faq">No more than 2GB. All files in your account must fit your allotted storage space.</p>           
-          </div>
-
-          <div class="container-once-faq">
-            <div class="sub-title">
-              <h3>How do I reset my password?</h3>
-              <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+  
+            <div class="container-once-faq">
+              <div class="sub-title">
+                <h3>How do I reset my password?</h3>
+                <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+              </div>
+              <p class="text-faq">Click “Forgot password” from the login page or “Change password” from your profile page.
+                A reset link will be emailed to you.</p>
             </div>
-            <p class="text-faq">Click “Forgot password” from the login page or “Change password” from your profile page.
-              A reset link will be emailed to you.</p>
-          </div>
-
-          <div class="container-once-faq">
-            <div class="sub-title"> 
-              <h3>Can I cancel my subscription?</h3>
-              <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+  
+            <div class="container-once-faq">
+              <div class="sub-title"> 
+                <h3>Can I cancel my subscription?</h3>
+                <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+              </div>
+              <p class="text-faq">Yes! Send us a message and we’ll process your request no questions asked.</p>
             </div>
-            <p class="text-faq">Yes! Send us a message and we’ll process your request no questions asked.</p>
-          </div>
-
-          <div class="container-once-faq">
-            <div class="sub-title"> 
-              <h3>Do you provide additional support?</h3>
-              <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+  
+            <div class="container-once-faq">
+              <div class="sub-title"> 
+                <h3>Do you provide additional support?</h3>
+                <img class="arrow" src="./css/images/icon-arrow-down.svg" alt="arrow">
+              </div>
+              <p class="text-faq">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
             </div>
-            <p class="text-faq">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
           </div>
 
         </div>
