Add style desig mobile

--- a/ping-coming-soon-page-master/index.html
+++ b/ping-coming-soon-page-master/index.html
@@ -11,19 +11,27 @@
     <title>Ping coming soon page - Mooenz</title>
   </head>
   <body>
-    <section>
-      <img src="./css/images/logo.svg" alt="">
-      <h1>We are launching soon!</h1>
-      <span>Subscribe and get notified</span>
-      <form>
+    <section class="container-main">
+      <div class="container-logo">
+        <img src="./css/images/logo.svg" height="18px" width="60px" alt="logo ping">
+      </div>
+      <h1> <span>We are launching</span> soon!</h1>
+      <h4>Subscribe and get notified</h4>
+      <form class="form">
         <input type="email" name="email" id="email" placeholder="Your email address">
         <input type="button" value="Notify Me">
       </form>
-      <img src="./css/images/illustration-dashboard.png" alt="dashboard">
+      <img src="./css/images/illustration-dashboard.png"  height="200px" alt="dashboard">
       <div class="container-social-media">
-        <i class="fab fa-facebook-f"></i>
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-instagram"></i>
+        <div class="icon">
+          <i class="fab fa-facebook-f"></i>
+        </div>
+        <div class="icon">
+          <i class="fab fa-twitter"></i>
+        </div>
+        <div class="icon">
+          <i class="fab fa-instagram"></i>
+        </div>
       </div>
       <span>
         &copy; Copyright Ping. All rights reserved.
