--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./css/images/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <title>FAQ Accordion Card - mooenz</title>
+    <title>FAQ Accordion Card - Mooenz</title>
   </head>
   <body>
     <main>
