Finish css and up solution image

--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -17,14 +17,16 @@
           <article class="card card-one">
             <div class="card-user">
               <img src="./css/images/image-daniel.jpg" alt="photo Daniel Clifford" class="card-user-img">
-              <h2 class="card-user-name">Daniel Clifford</h2>
-              <p class="card-user-check">Verified Graduate</p>
+              <div>
+                <h2 class="card-user-name">Daniel Clifford</h2>
+                <p class="card-user-check">Verified Graduate</p>
+              </div>
             </div>
-            <p class="card-user-name-testimony-one">
+            <p class="card-user-testimony-one">
               I received a job offer mid-course, and the subjects I learned were current, if not more so, 
               in the company I joined. I honestly feel I got every penny’s worth.
             </p>
-            <p class="card-user-name-testimony-two">
+            <p class="card-user-testimony-two">
               “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
               transition and have heard some people who had an amazing experience here. I signed up 
               for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
@@ -35,52 +37,63 @@
           <article class="card card-two">
             <div class="card-user">
               <img src="./css/images/image-jonathan.jpg" alt="" class="card-user-img">
-              <h2 class="card-user-name">Jonathan Walters</h2>
-              <p class="card-user-check">Verified Graduate</p>
+              <div>
+                <h2 class="card-user-name">Jonathan Walters</h2>
+                <p class="card-user-check">Verified Graduate</p>
+              </div>
             </div>
-            <p class="card-user-name-testimony-one">
+            <p class="card-user-testimony-one">
               The team was very supportive and kept me motivated
             </p>
-            <p class="card-user-name-testimony-two">
+            <p class="card-user-testimony-two">
               “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
               for a big company. This was one of the best investments I’ve made in myself. ”
             </p>
           </article>
         </div>
         <div class="container-testimonial-group-left-down">
+
           <article class="card card-tree">
             <div class="card-user">
               <img src="./css/images/image-jeanette.jpg" alt="Jeanette Harmon" class="card-user-img">
-              <h2 class="card-user-name">Jeanette Harmon</h2>
-              <p class="card-user-check">Verified Graduate</p>
+              <div>
+                <h2 class="card-user-name">Jeanette Harmon</h2>
+                <p class="card-user-check">Verified Graduate</p>
+              </div>
             </div>
-            <p class="card-user-name-testimony-one">An overall wonderful and rewarding experience</p>
-            <p class="card-user-name-testimony-two">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
-              while doing something I love. ”</p>
+            <p class="card-user-testimony-one">An overall wonderful and rewarding experience</p>
+            <p class="card-user-testimony-two">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. ”</p>
           </article>
-          <article class="card card-ford"></article>
-          <div class="card-user">
-            <img src="./css/images/image-patrick.jpg" alt="Patrick Abrams" class="card-user-img">
-            <h2 class="card-user-name">Patrick Abrams</h2>
-            <p class="card-user-check">Verified Graduate</p>
-          </div>
-          <p class="card-user-name-testimony-one">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-            learning from their experiences was easy.</p>
-          <p class="card-user-name-testimony-two">“ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
-            gave me the confidence necessary to be able to go out in the world and present myself as a capable 
-            junior developer. The standard is above the rest. You will get the personal attention you need from 
-            an incredible community of smart and amazing people. ”</p>
+
+          <article class="card card-four">
+            <div class="card-user">
+              <img src="./css/images/image-patrick.jpg" alt="Patrick Abrams" class="card-user-img">
+              <div>              
+                <h2 class="card-user-name">Patrick Abrams</h2>
+                <p class="card-user-check">Verified Graduate</p>
+              </div>
+            </div>
+            <p class="card-user-testimony-one">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
+              learning from their experiences was easy.</p>
+            <p class="card-user-testimony-two">“ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
+              gave me the confidence necessary to be able to go out in the world and present myself as a capable 
+              junior developer. The standard is above the rest. You will get the personal attention you need from 
+              an incredible community of smart and amazing people. ”</p>
+          </article>
+
         </div>
       </div>
       <div class="container-testimonial-group-right">
         <article class="card card-five">
           <div class="card-user">
             <img src="./css/images/image-kira.jpg" alt="" class="card-user-img">
-            <h2 class="card-user-name">Kira Whittle</h2>
-            <p class="card-user-check">Verified Graduate</p>
+            <div>              
+              <h2 class="card-user-name">Kira Whittle</h2>
+              <p class="card-user-check">Verified Graduate</p>
+            </div>
           </div>
-          <p class="card-user-name-testimony-one">Such a life-changing experience. Highly recommended!</p>
-          <p class="card-user-name-testimony-two">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
+          <p class="card-user-testimony-one">Such a life-changing experience. Highly recommended!</p>
+          <p class="card-user-testimony-two">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
             professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
             student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
             did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
