Modify readme and fixed html details

--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -2,19 +2,19 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="icon" type="image/png" sizes="32x32" href="./css/images/favicon-32x32.png">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;900&family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+    <link rel="icon" type="image/png" sizes="32x32" href="./css/images/favicon-32x32.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;900&family=Fraunces:wght@700;900&display=swap" rel="stylesheet" />
     <title>Sunnyside agency landing page - Mooenz</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
   </head>
   <body>
     <header class="container-header">
       <nav class="container-header-nav">
         <div class="container-header-nav-img">          
-          <img src="./css/images/logo.svg" alt="logo">
+          <img src="./css/images/logo.svg" alt="logo" />
         </div>
         <ul class="container-header-nav-links">
           <li><a href="#"></a>About</li>
@@ -23,12 +23,12 @@
           <li><button>contact</button></li>
         </ul>
         <div class="container-header-nav-burger">
-          <img src="./css/images/icon-hamburger.svg" alt="icon burger">
+          <img src="./css/images/icon-hamburger.svg" alt="icon burger" />
         </div>
       </nav>
       <div class="container-header-title">
         <h1>We are creatives</h1>
-        <img src="./css/images/icon-arrow-down.svg" alt="arrow down.">
+        <img src="./css/images/icon-arrow-down.svg" alt="arrow down" />
       </div>
     </header>
 
@@ -44,7 +44,7 @@
       </section>
 
       <section class="container-article two">
-        <img src="./css/images/desktop/image-stand-out.jpg" alt="Stand out to the right audience">
+        <img src="./css/images/desktop/image-stand-out.jpg" alt="Stand out to the right audience" />
 
         <article class="article">
           <h2 class="article-title">Stand out to the right audience</h2>
@@ -71,7 +71,7 @@
         </div>
         <div class="container-testimonials-cards">
           <article class="card">
-            <img class="card-img" src="./css/images/image-emily.jpg" alt="emily photo">
+            <img class="card-img" src="./css/images/image-emily.jpg" alt="emily photo" />
             <p class="card-testimony">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
             <h3 class="card-name">Emily R.</h3>
             <p class="card-job">Marketing Director</p>
@@ -96,11 +96,11 @@
       <section class="container-carrusel">
         <div class="container-carrusel-img">
           <img src="./css/images/desktop/image-gallery-milkbottles.jpg" alt="milkbottles" />
-          <img src="./css/images/desktop/image-gallery-orange.jpg" alt="" />
+          <img src="./css/images/desktop/image-gallery-orange.jpg" alt="orange" />
         </div>
         <div class="container-carrusel-img">
-          <img src="./css/images/desktop/image-gallery-cone.jpg" alt="" />
-          <img src="./css/images/desktop/image-gallery-sugarcubes.jpg" alt="" />
+          <img src="./css/images/desktop/image-gallery-cone.jpg" alt="cone" />
+          <img src="./css/images/desktop/image-gallery-sugarcubes.jpg" alt="sugarcubes" />
         </div>
       </section>
     </main>
