--- a/interactive-pricing-component-main/index.html
+++ b/interactive-pricing-component-main/index.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="./css/images/favicon-32x32.png">
+    
+    <title>Interactive pricing component - Mooenz</title>
+  </head>
+  <body>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Interactive pricing component</title>
+    Simple, traffic-based pricing
+    Sign-up for our 30-day trial. No credit card required. 
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    Pageviews
+    $ /month
 
-  Simple, traffic-based pricing
-  Sign-up for our 30-day trial. No credit card required. 
+    Monthly Billing
+    Yearly Billing 25% discount
 
-  Pageviews
-  $ /month
+    Unlimited websites
+    100% data ownership
+    Email reports
 
-  Monthly Billing
-  Yearly Billing 25% discount
+    Start my trial
 
-  Unlimited websites
-  100% data ownership
-  Email reports
-
-  Start my trial
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  </body>
 </html>
